--- a/1html/실습_웹문서작성/실습문제3.html
+++ b/1html/실습_웹문서작성/실습문제3.html
@@ -3,42 +3,93 @@
 <head>
   <meta charset="UTF-8">
   <title></title>
+  <!--style태그의 위치는 head태그의 안쪽에다 작성-->
   <style>
-    table, td, th {
-      border:1px solid #000;
+    div{
+      /*border:1px solid pink;*/
+      padding-left: 50px;
+      width: 600px;
+    }
+    table, tr, td, th{
+      10진수 1~10
+      16진수 1~16
+      1~10, a,b,c,d,e,f
+      border: 1px solid #ccc;
       border-collapse: collapse;
-    }
-    td, th {
-      padding:10px 20px;
-    }
-    td:last-child{
-      width:200px;
+      margin: 20px
+      padding: 30px;
     }
   </style>
 </head>
 <body>
+  <img  src="../images/top.jpg" alt="상단이미지">
+  <div>
 
-탐라국 입춘굿
-탐라국 입춘굿은 입춘을 맞아 풍년을 기원하는 행사로, 제주도의 문화 축제 중에서 유일하게 탐라 시대부터 이어져 왔다.
+    <h1>탐라국 입춘굿</h1>
+    <p>
+      탐라국 입춘굿은 입춘을 맞아 풍년을 기원하는 행사로, 제주도의 문화 축제 중에서 유일하게 탐라 시대부터 이어져 왔다.
+    </p>
+    <p>
+      제주에서는 입춘을 새철이라 한다.
+    신구간이 끝나 하늘의 1만 8,000 신이 지상으로 내려와 새해 일을 시작하는 때다.
+    <p>
 
-제주에서는 입춘을 새철이라 한다.
-신구간이 끝나 하늘의 1만 8,000 신이 지상으로 내려와 새해 일을 시작하는 때다.
+      <a href="실습문제2.html">자세한 정보 보기</a>
+<p>
+  
+  <img src="../images/tangerines.jpg" alt="귤">
+</p>
+   
+    <h4>일정</h4>
+    <ol>
+      <li>입춘맞이 : 1/27(월) ~ 1/31(금)</li>
+      <li>낭쉐코사 : 2/1(토)</li>
+      <li> 거리굿 : 2/2(일)</li>
+      <li>열림굿 : 2/3(월)</li>
+      <li>입춘굿 : 2/4(화)</li>
+    </ol>
 
-자세한 정보 보기
-일정
-입춘맞이 : 1/27(월) ~ 1/31(금)
-낭쉐코사 : 2/1(토)
-거리굿 : 2/2(일)
-열림굿 : 2/3(월)
-입춘굿 : 2/4(화)
-먹거리
-입춘 천냥 국수	11:00 ~ 16:00	목관아 주차장
-입춘 천냥 국수	11:00 ~ 16:00	목관아 주차장
-제주 향토 음식	10:30 ~ 17:00	관덕정 마당
-입춘 주전부리	10:30 ~ 17:00	관덕정 마당
-차 나눔	10:30 ~ 17:00	관덕정 마당
+    <h3>먹거리</h3>
+
+    <table>
+      <tr>
+        <td>입춘 천냥 국수</td>
+        <td>11:00 ~ 16:00</td>
+        <td>목관아 주차장</td>
+      </tr>
+      <tr>
+        <td>제추 향토</td>
+        <td>10:30 ~ 17:00</td>
+        <td>관덕정 마당</td>
+      </tr>
+      <tr>
+        <td>입춘 주전부리</td>
+        <td>10:30 ~ 17:00</td>
+        <td>관덕정 마당</td>
+      </tr>
+      <tr>
+        <td>차 나눔</td>
+        <td>10:30 ~ 17:00	</td>
+        <td>관덕정 마당</td>
+      </tr>
+    </table>
+
+    
+     일정
+    입춘맞이 : 1/27(월) ~ 1/31(금)
+    낭쉐코사 : 2/1(토)
+    거리굿 : 2/2(일)
+    열림굿 : 2/3(월)
+    입춘굿 : 2/4(화)
+    먹거리
+    입춘 천냥 국수	11:00 ~ 16:00	목관아 주차장
+    입춘 천냥 국수	11:00 ~ 16:00	목관아 주차장
+    제주 향토 음식	10:30 ~ 17:00	관덕정 마당
+    입춘 주전부리	10:30 ~ 17:00	관덕정 마당
+    차 나눔	10:30 ~ 17:00	관덕정 마당
+  </div>
 
 
-</div>
+
 </body>
 </html>
