--- a/1html/복습0705b.html
+++ b/1html/복습0705b.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>회원가입 완료</title>
+    <title>개념이 아직 이해 안되네 ㅠ</title>
 </head>
 <body>
-    <h1>회원가입 완료</h1>
+    
 </body>
 </html>
