--- a/2CSS/3CSS텍스트 스타일.html
+++ b/2CSS/3CSS텍스트 스타일.html
@@ -62,10 +62,33 @@
         <li style="text-decoration: overline;">위쪽 선</li>
      </ul>
 
-
+     <h2>7. text-align</h2>
+     <p class="lineheight">텍스트 정렬 방법 지정</p>
+     <ul>
+        <li class="center">리스트1</li>
+        <li class="left">리스트2</li>
+        <li class="right">right</li>
+        <li>리스트4</li>
+     </ul>
 
      여러줄 더미 문자열 : lorem
      lorem*5 : 5줄 다동 입력
+
+     <h2>8. text-shadow</h2>
+     <p>텍스트에 그림자 효과를 추가하는 혹성</p>
+     <ul>
+        <li class="shadow1">HTML</li>
+        <li class="shadow2">CSS</li>
+        <li class="shadow3">JaveScript</li>
+     </ul>
     
+     <h2>letter-spacing, word-spacing</h2>
+     <p>글자간 간격, 단어간 간격</p>
+     <ul>
+        <li class="spacing">CSS</li>
+        <li>CSS</li>
+     </ul>
+
+     <br><br><br><br><br><br><br>
 </body>
 </html>
