--- a/2CSS/실습_텍스트관련스타일/실습5.html
+++ b/2CSS/실습_텍스트관련스타일/실습5.html
@@ -4,43 +4,37 @@
     <meta charset="utf-8">
     <title>텍스트 스타일</title>
     <style>
-		.book-img{
-			float: left;
-			margin-right: 20px;
-		}
-		h1{
-			/* 16px * 1.5 = 24px */
-			font-size: 1.2rem;
-		}
-		.accent{
-			color: rgb(255,0,0);
-			font-weight: 600;
-		}
-
-		.container{
-			border: 1px solid #ccc;
-			width: 800px;
-			height:350px;
-			padding: 20px;
-		}
-
-		a{
-			text-decoration: none;
-			color: black;
-		}
-
-		.book-desc{
-			line-height: 25px;
-			font-family: 맑은고딛;
-			font-size: 0.8rem;
-		}
-
-		.clear{
-			clear: both;
-		}
-
-
-
+	.container{
+		/* #000 검정색 - #fff 흰색 */
+		/* 1 2 3 4 5 6 7 8 9 a b c d e f */
+		border: 1px solid #333;
+		line-height: 1.7rem;
+		padding: 20px;
+		width: 700px;
+	}
+	.book-img{
+		float: left;
+		margin-right: 20px;
+	}
+	h1{
+		/* rem 16px * 2 32px */
+		font-size: 1.2rem;
+	}
+	.accent{
+		color: red;
+		font-weight: 800;
+	}
+	.book-desc{
+		width: 650px;
+	}
+	.clear{
+		clear:both;
+	}
+	
+	a{
+		text-decoration: none;
+		color: #000;
+	}
 	</style>
   </head>
   <body>
