--- a/2CSS/실습_레이아웃/3. 레이아웃0.html
+++ b/2CSS/실습_레이아웃/3. 레이아웃0.html
@@ -6,128 +6,112 @@
 <style>
 	.container{
 		width: 800px;
-		margin: 0px auto;
-	}
-	body{
-		margin-top: 0px;
+		margin: auto;
 	}
 	header{
-		/* 
-		경로
-		   ../ : 상위폴더
-		   /   : 루트
-		   ./  : 현재폴더 */
-		background: url(images/bg.png);
-		/* 높이를 지정 */
+		background: url(images/bg.png) no-repeat;
+		background-size: 100% 100%;
+		width: 100%;
 		height: 180px;
-		/* 박스의 크기를 정할때 패딩영역까지를 박스의 크기로 정해주지 않으면
-		박스의 크기가 늘어날수 있다
-		box-sizing: border-box; <- 보더영역까지를 박스의 크기로 설정
-		box-sizing: content-box; <-- 기본값 (보더영역, 패딩영역이 포함되지 않음)
-		*/
-		box-sizing: border-box;/*패딩과 보더가 포함되지 않은 높이*/
-		padding-top: 90px;
 	}
-
-	header {
-		text-align: right;
-	}
-
-	header h1{
-		color: #fff;
+	header>h1{
+		color: white;
 		text-shadow: 3px 3px 2px black;
+		text-align: right;
 		padding-right: 20px;
+		padding-top: 80px;
 		margin: 0px;
 	}
+	/* 
+	> :자식을 선택
+	시작태그와 끝태그 사잉에 있는 요소
+
+	공백 : 자식, 자손까지 선택
+	*/
 	header h2{
 		color: yellow;
-		margin: 0px;
+		text-align: right;
 		padding-right: 20px;
-		font-size: 1.2rem;
+		margin: 0px;
+		font-size: 16px;
 	}
-
-	ul{
+	nav{
+		width: 100%;
+		height: 40px;
 		background-color: black;
+	}
+	ul{
+		margin: 0px;
 		padding: 0px;
 		list-style: none;
-		margin: 0px;
+		height: 100%;
 	}
 	li{
+		float: left;
+		border: 1px solid white;
+		height: 100%;
 		width: 25%;
-		/* display: inline-block으로 했을경우,
-		딱 맞게 출력 하고 싶으면
-		float을 이용하는것이 좋아요! 
-		 */
-		/* display: inline-block; */
-		float: left;
-		background-color: black;
 		text-align: center;
-	}
-	a{
-		color: #fff;
-		text-decoration: none;
-		
-		height: 60px;
-		line-height: 60px;
-		display: inline-block;
-		text-align: center;
-		font-weight: 800;
-
-		/* border: 1px solid; */
-		width: 100%;
-	}
-
-	li:hover{
-		background-color: blue;	
-	}
-
-	nav ul{}
-	.navi > ul > li{}
-	.navi li:nth-child(4){
-		background-color: blue;
-	}
-
-	footer{
-		background-color: black;
-		color: #fff;
-		padding: 20px;
-		clear: both;
-	}
-
-	footer p {
-		margin: 0px;
-	}
-
-	section{
-		width: 75%;
-		float: left;
 	}
 	*{
 		box-sizing: border-box;
 	}
+	a{
+		text-decoration: none;
+		color: white;
+		line-height: 40px;
+
+		/* display속성이 inline인 경우 영역을 지정할 수 없다
+		영역을 지정 하기 위해 display속성을 변경해야함 */
+		width: 100%;
+		height: 100%;
+		display: inline-block;
+		/* --------------------------------------------------- */
+		font-weight: 800;
+	}
+	a:hover{
+		background-color: white;
+		color: black;
+	}
+	nav li:nth-child(4){
+		background-color: red;
+	}
+
+	section{
+		width: 70%;
+		float: 	left;
+	}
+
 	aside{
 		width: 25%;
-		padding: 10px;
 		float: right;
 	}
-	aside img{
-		width: 100%
+
+	footer{
+		clear: both;
 	}
-	.banner img {
+
+	.banner img{
 		width: 100%;
 	}
 
-
+	footer{
+		background-color: black;
+		color: white;
+		padding: 20px;
+	}
 </style>
 </head>
 
 
 <body>
 <div class="container">
+	<!-- 헤더영역 : fhrh, 메뉴 ..-->
 	<header>
 		<h1>Joandora</h1>
 		<h2>가장 제주다운 수산리집</h2>
 	</header>  
+	<!-- 메뉴 -->
     <nav class="navi">
       <ul>
         <li><a href="#">이용 안내</a></li>
@@ -135,7 +119,9 @@
         <li><a href="#">예약 방법</a></li>
         <li><a href="#">예약하기</a></li>
       </ul>
-    </nav>  
+    </nav> 
+	<main>
+	<!--main : 메인컨텐츠를 담는 요소--> 
 	<section class="content">
 		<h2>요안도라 소개</h2>    
 		<article>
@@ -154,7 +140,9 @@
 			<img src="images/2.jpg" alt="">
 			<img src="images/1.jpg" alt="">
 			<img src="images/4.jpg" alt="">    
-	</aside>    
+	</aside> 
+	</main>
+	<!--하단영역-->   
 	<footer>
 			<address>
 					<p>제주특별자치도 남제주군 성산읍 수산리 000 번지 요안도라 </p>
