--- a/2CSS/9고급선택자.html
+++ b/2CSS/9고급선택자.html
@@ -5,8 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        .top{
-            
+        /* > : 자식선택
+        바로 하위 요소만 선택 
+        */
+       body > ul{
+        background-color: #333;
+       }
+       /* 공백 : 하위 선택자
+       자식을 포함한 자손 선택 
+       */
+       body ul{
+        background-color: red;
+       }
+       /* 형제선택자 : 부모가 같은 요소
+       선택자1 + 선택자2
+            같은 레벨이면서 첫번째 동생인 경우
+        선택자1 ~ 선택자2
+            같은 레벨이면서 형요소 다음에 오는 모든 동생요소
+        */
+        h1 + ul {
+            background-color: aqua;
+        }
+        h1 ~ a{
+            background-color: blueviolet;
+        }
+
+        /* 속성선택자 */
+        /* 속성이 있으면 선택 */
+        [href]{
+            color: red;
+        }
+        /* 쌍따음표 안의 값이
+        = 속성의 값이 일치하는 경우 
+        ^= 속성의 값이 시작하는 경우
+        $=            끝나는 경우
+        *=            포함하는 경우
+        */
+        [href $= "png"]{
+            background-color: black;
+        }
+        [href ^= "c"]{
+            background-color: blue;
         }
     </style>
 </head>
@@ -14,12 +53,12 @@
     
     <h1>고급선택자</h1>
     <ul class="top">
-        <li><a href="">메뉴1</a></li>
-        <li><a href="">메뉴2</a></li>
+        <li><a href="a.png">메뉴1</a></li>
+        <li><a href="b.html">메뉴2</a></li>
         <li>메뉴3</li>
         <li>메뉴4</li>
     </ul>
-    <a href="">메인화면</a>
+    <a href="c.gif">메인화면</a>
     <div>
         <h1>제목</h1>
         <ul>
