--- a/2CSS/실습_레이아웃/3. 레이아웃1.html
+++ b/2CSS/실습_레이아웃/3. 레이아웃1.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>HTML5 레이아웃</title>
-
+  <link rel="stylesheet" href="css/3.레이아웃1.css">
 </head>
 <body>
 <div id="wrapper">
