--- a/2CSS/실습_선택자/실습1.html
+++ b/2CSS/실습_선택자/실습1.html
@@ -4,107 +4,71 @@
 <meta charset="UTF-8">
 <title>속성 선택자</title>
 <style>
-	ul {
-			list-style:square;
+	ul{
+		list-style: none;
+		margin: 0px;
+		padding: 0px;
 	}
-	li{
-		display: inline-block;
-		padding: 20px;
-
-	}
-
-	li a {
-		line-height:30px;
-		font-size: 14px;
-		color: blue;
-		text-decoration: none;
-	}
-	
-	/*
-	:first-child - 부모안에 있는 모든 요소들 중에서
-	:first-of-type - 부모안에 있는 타입 중에서
-	*/
-	
-	:first-of-type{
-		/* background:url(../images/excel_icon.gif) no-repeat left center; */
-		/* border: 1px solid; */
-	}
-	/* > 자식
-	   공백 자식을 포함한 손주 */
-	ul:first-of-type > li:first-child {
-		background-color: aquamarine;
-		/* background 의 여러가지 속성을 지정 하는 경우 대표속성으로 사용! 
-		background-image 는 이미지만 지정 할수 있음 
-		여러가지 속성을 같이 입력하면 이미지도 안나옴 
-		*/
-		background:url(../images/n_us.png) no-repeat left center;
-	
-	}
-/* 	
-	ul:last-of-type li{
-		background-color: blueviolet;
-	}
-		
-	.nation li:nth-child(2){
-		background:url(../images/n_jp.png) no-repeat left center;
-	}
-
-	.nation li:last-child{
-		background:url(../images/n_ch.png) no-repeat left center;
-	} */
-
 	/* a[title] : title 속성을 가지고 있는 모든 요소 
 	a[title ^= ja] : title속성의 값이 ja로 시작하는 요소
 	a[title *= ne] : title속성의 값이 ne를 포함하는 요소
 	a[title |= us] : title속성의 값이 us이거나 us-로 시작하는 요소
 	a[title = chinese] : title속성의 값이 chinese인 요소
 	a[title $= inese] : title속성의 값이 inese로 끝나는 요소
-	*/
-	a[title |= ja]{
-		background: url(../images/n_jp.png) no-repeat left center;
-		padding: 20px;
+	*/ 
+
+	li{
+		float: left;
+
+		width: 100px;
+		height: 50px;
+
+		border: 1px solid;
 	}
-	a[title $= inese] {
+	ul ~ h3{
+		clear: both;
+		padding-top: 30px;
+	}
+	a[title^="us"]{
+		padding-left: 20px;
+
+		background: url(../images/n_us.png) no-repeat left center;
+	}
+	a[title|="ja"]{
+		padding-left: 20px;
+		background: url(../images/n_jp.png) no-repeat left center;
+	}
+	a[title $="chinese"]{
+		padding-left: 20px;
 		background: url(../images/n_ch.png) no-repeat left center;
-		padding: 20px;
+	}
+	a[href ^="http"]{
+		padding-right: 20px;
+		background: url(../images/hwp_icon.gif) no-repeat right center;
+	}
+	a[href$="xls"]{
+		padding-right: 20px;
+		background: url(../images/excel_icon.gif) no-repeat right center;
 	}
 
-	a{
-		/* border: 1px solid; */
-		/* 선택자의 우선순위에 의해
-		백그라운드가 적용되어 있어서 적용이 안됨*/
-		background-color: red;
-	}
 	/* 링크 */
 	a:link{
-		color: #333;
+		text-decoration: none;
 	}
 
-	/* 방문했던링크*/
+	/* 방문했던 링크 */
 	a:visited{
-		color: red;
-		background-color: skyblue;
-		
+		color: black;
 	}
 
-	/* 마우스가 요소위로 올라 갔을때  */
+	/* 마우스가 요소위로 올라갔을때 */
 	a:hover{
-		background-color: blue;
+		background-color: black;
 	}
 
-	/* 요소가 클릭 되었을때 */
+	/* 요소가 클릭되었을때 */
 	a:active{
 		background-color: red;
-	}
-
-	a[href$=hwp]{
-		background: url(../images/hwp_icon.gif) no-repeat right center;
-		padding-right: 20px;
-	}
-
-	a[href$=xls]{
-		background: url(../images/excel_icon.gif) no-repeat right center;
-		padding-right: 20px;
 	}
 </style>
 </head>
