--- a/2CSS/복습0711c.html
+++ b/2CSS/복습0711c.html
@@ -4,8 +4,161 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+
+    </style>
 </head>
 <body>
-    
+    <div id="container">
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="cheak">애완견 종류</a></li>
+                    <li><a href="#">입양하기</a></li>
+                    <li><a href="#">건강돌보기</a></li>
+                    <li><a href="#">더불어살기</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <section>
+                <article>
+                    <h3>활달한 강아지</h3>
+                    <dl>
+                        <dt>요크셔 테리어</dt>
+                        <dd>생기있고 활달한 성질을 가지고 있으며 자신보다 몸집이 큰 개나 집에 들어온 침입자를 겁내는 일이 없어 좋은 번견이고 우리나라 최고의의 가정견으로 자리 잡고 있다.</dd>
+                        <dt>말티즈</dt>
+                        <dd>애정이 많고, 충실하며 활발한 성격을 소유하고 있다. 이 종은 1급 가정견으로 요크셔테리어와 함께 우리나라 최고의 가정견으로 자리잡고 있다.</dd>
+                        <dt>포메 라이언</dt>
+                        <dd>활기차고 명랑한 개로 유명하고, 걷는 모습이 우아하다. 충실하고 우호적인 성격이 가장 먼저 거론된다.</dd>
+
+                    </dl>
+                </article>
+                <article>
+                    <h3>온순한강아지</h3>
+                    <dl>
+                        <dt>쉬즈</dt>
+                        <dd>얼굴에서 풍기는 모습처럼 온순, 쉽게 친숙해지고 우호적이며, 어린아이나 여성들이 기르기에 적합한 견종이다.</dd>
+                        <dt>퍼그</dt>
+                        <dd>매우 사려가 깊고 사랑스러운 견종이며 그다지 손질이 필요하지 않고 식사량에 비해 많은 운동량이 필요하지 않다.</dd>
+                        <dt>래프라도 리트리버</dt>
+                        <dd>침착하고 영리하여 어린이들을 안심하고 맡길 수 있다. 사람을 즐겁게 해주려는 성질이 있다. 공을 가지고 노는 것을 가장 좋아한다. 현재 맹인 안내견과 마약견으로 사용중이다. 온순한 강아지를 좋아하는 분에게는 적합한 견종이다.</dd>
+
+                    </dl>
+                </article>
+                <article>
+                    <h3>사납지만 복종적인 강아지</h3>
+                    <dl>
+                        <dt>미니어쳐핀셔</dt>
+                        <dd>경계심이 강하고 영리하며 작은 몸집에 비해 매우 용감하다. 주인에게 매우 복종적이며 작은 몸집에 보디가드 역활을 충실히 수행한다.</dd>
+                        <dt>푸들</dt>
+                        <dd>사납진 않으나, 상당히 복종</dd>
+                    </dl>
+                </article>
+            </section>
+        </main>
+    </div>
 </body>
 </html>
+ul {
+    list-style:square;
+}
+li{
+display: inline-block;
+padding: 20px;
+
+}
+
+li a {
+line-height:30px;
+font-size: 14px;
+color: blue;
+text-decoration: none;
+}
+
+/*
+:first-child - 부모안에 있는 모든 요소들 중에서
+:first-of-type - 부모안에 있는 타입 중에서
+*/
+
+:first-of-type{
+/* background:url(../images/excel_icon.gif) no-repeat left center; */
+/* border: 1px solid; */
+}
+/* > 자식
+공백 자식을 포함한 손주 */
+ul:first-of-type > li:first-child {
+background-color: aquamarine;
+/* background 의 여러가지 속성을 지정 하는 경우 대표속성으로 사용! 
+background-image 는 이미지만 지정 할수 있음 
+여러가지 속성을 같이 입력하면 이미지도 안나옴 
+*/
+background:url(../images/n_us.png) no-repeat left center;
+
+}
+/* 	
+ul:last-of-type li{
+background-color: blueviolet;
+}
+
+.nation li:nth-child(2){
+background:url(../images/n_jp.png) no-repeat left center;
+}
+
+.nation li:last-child{
+background:url(../images/n_ch.png) no-repeat left center;
+} */
+
+/* a[title] : title 속성을 가지고 있는 모든 요소 
+a[title ^= ja] : title속성의 값이 ja로 시작하는 요소
+a[title *= ne] : title속성의 값이 ne를 포함하는 요소
+a[title |= us] : title속성의 값이 us이거나 us-로 시작하는 요소
+a[title = chinese] : title속성의 값이 chinese인 요소
+a[title $= inese] : title속성의 값이 inese로 끝나는 요소
+*/
+a[title |= ja]{
+background: url(../images/n_jp.png) no-repeat left center;
+padding: 20px;
+}
+a[title $= inese] {
+background: url(../images/n_ch.png) no-repeat left center;
+padding: 20px;
+}
+
+a{
+/* border: 1px solid; */
+/* 선택자의 우선순위에 의해
+백그라운드가 적용되어 있어서 적용이 안됨*/
+background-color: red;
+}
+/* 링크 */
+a:link{
+color: #333;
+}
+
+/* 방문했던링크*/
+a:visited{
+color: red;
+background-color: skyblue;
+
+}
+
+/* 마우스가 요소위로 올라 갔을때  */
+a:hover{
+background-color: blue;
+}
+
+/* 요소가 클릭 되었을때 */
+a:active{
+background-color: red;
+}
+
+a[href$=hwp]{
+background: url(../images/hwp_icon.gif) no-repeat right center;
+padding-right: 20px;
+}
+
+a[href$=xls]{
+background: url(../images/excel_icon.gif) no-repeat right center;
+padding-right: 20px;
+}
